# serializer version: 1
# name: test_tools_call
  dict({
    'failed': list([
    ]),
    'success': list([
      dict({
        'id': 'light.kitchen',
        'name': 'Kitchen',
        'type': 'entity',
      }),
    ]),
    'targets': list([
    ]),
  })
# ---
# name: test_tools_list
  'HassTurnOn'
# ---
# name: test_tools_list.1
  'Turns on/opens a device or entity'
# ---
# name: test_tools_list.2
  dict({
    'type': 'string',
  })
# ---
